--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -364,6 +364,10 @@ footer {
     transform: translate(-50%, -50%);
     text-align: center;
 
+    img {
+        height: 20%;
+        width: 20%;
+    }
     h1, h2 {
         margin: 0;
     }
