--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -367,6 +367,7 @@ footer {
     img {
         height: 80%;
         width: 80%;
+        border-radius: 50%;
     }
     h1, h2 {
         margin: 0;
